fix: Fix source_is_portstone not functioning #1025